<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/almostBlack"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp" >


        <TextView
            android:id="@+id/workingsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resultsTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/resultsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="allClearAction"
            android:text="@string/Clear" />
        <Button
            style="@style/buttonNumber"
            android:text="" />
        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="debugAction"
            android:text="@string/da" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/Division"
            android:onClick = "operationAction"/>
    </LinearLayout>


    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/Number_7"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/Number_8"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_9"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/Multiplication"
            android:onClick = "operationAction"/>
    </LinearLayout>


    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_4"
            android:onClick = "numberAction"/>

        <Button
            style="@style/buttonNumber"
            android:text="5"
            android:onClick = "numberAction"/>

        <Button
            style="@style/buttonNumber"
            android:text="@string/N_6"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/Subtraction"
            android:onClick = "operationAction"/>
    </LinearLayout>


    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_1"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_2"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_3"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/Addition"
            android:onClick = "operationAction"/>
    </LinearLayout>



    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/N_0"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/decimalpoint"
            android:onClick = "numberAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:onClick="backSpaceAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="="
            android:background="@color/orange"
            android:textSize="40sp"
            android:onClick="equalsAction"/>

    </LinearLayout>


    </LinearLayout>



